Hopefully fix icons stretching bug

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,6 @@
 html {
 	font-size: 16px;
+	background-color: #000;
 }
 
 body h1, h2, h3, h4, p, a {
@@ -212,13 +213,13 @@ body h1, h2, h3, h4, p, a {
 	flex-wrap: wrap;
 	justify-content: center;
 	padding: 1.5vh 0 3vh 0;
+	margin: auto;
 }
 
 .icons img {
-	/* display: flex;
-	flex-wrap: wrap;
-	flex: 25%; */
+	/* flex: 25%; */
 	max-width: 18%;
+	max-height: 11em;
 }
 
 .innovation-page .title, .innovation-page .content-margin,
